Fix scroll stuck after last card

--- a/src/components/ScrollStack/ScrollStack.css
+++ b/src/components/ScrollStack/ScrollStack.css
@@ -41,7 +41,7 @@
 
 .scroll-stack-end {
   width: 100%;
-  height: 1px;
+  height: 60vh;
 }
 
 @media (max-width: 768px) {
